# upt-converter-rs

./: Cargo.toml  readme.md
assets/: other.upt
assets/normalized/: grouping.xml  other.xml
benches/: my_benchmark.rs
src/: convert.rs  lib.rs  macros.rs  model.rs  unipol.rs
src/error/: conversion.rs  convert.rs  mod.rs  model.rs  unipol.rs
upt-converter/: Cargo.toml
upt-converter-cli/: Cargo.toml
upt-converter-cli/src/: main.rs
upt-converter/assets/: grouping.upt
upt-converter/src/: conversion.rs  model.rs  unipol.rs
upt-converter/src/error/: conversion.rs  model.rs
