[package]
name = "upt-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0"
serde = "1.0"
serde-xml-rs = "0.5"
serde_json = "1.0"
utf16string = "0.2"
thiserror = "1.0.63"
clap = { version = "4.5.17", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
